# sendmail

./: .gitignore  pyproject.toml  setup.py
src/: __main__.py  hashiget.py
